--- a/package.json
+++ b/package.json
@@ -4,23 +4,22 @@
     "description": "A React portfolio for showcasing projects and skills",
     "main": "index.js",
     "scripts": {
-      "dev": "vite",
-      "start": "vite",
-      "build": "vite build",
-      "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-      "preview": "vite preview"
+        "dev": "vite",
+        "start": "vite",
+        "build": "vite build",
+        "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+        "preview": "vite preview"
     },
     "author": "Sam Mina",
     "license": "None",
     "dependencies": {
-      "react": "^18.0.0",
-      "react-dom": "^18.0.0",
-      "react-router-dom": "^6.0.0"
+        "react": "^18.0.0",
+        "react-dom": "^18.0.0",
+        "react-router-dom": "^6.28.0"
     },
     "devDependencies": {
-      "@vitejs/plugin-react": "^4.0.0",
-      "vite": "^4.0.0",
-      "eslint": "^8.0.0"
+        "@vitejs/plugin-react": "^4.0.0",
+        "eslint": "^8.0.0",
+        "vite": "^4.0.0"
     }
-  }
-  
+}
